lets see the change

--- a/courses.html
+++ b/courses.html
@@ -217,7 +217,6 @@
                                 }
                            } else {
                                 console.warn("Video URL does not appear to be a standard YouTube URL:", videoDetails.videoUrl);
-                                // Optional: Show a message to the user
                            }
                       } catch (e) {
                           console.error("Error parsing video URL:", videoDetails.videoUrl, e);
@@ -264,9 +263,6 @@
                                console.log("Loading YouTube Playlist with ID:", youtubeId);
                                const playlistItemsContainer = document.getElementById('playlistItemsContainer');
                                if (playlistItemsContainer) playlistItemsContainer.classList.remove('hidden');
-                               // TODO: Fetch playlist items from YouTube Data API and populate #playlistItemsList
-                               // This requires a Google API key and separate API calls.
-                               console.warn("Playlist item listing is not yet implemented (requires YouTube Data API).");
 
                           } else {
                               playerOptions.videoId = youtubeId;
@@ -405,7 +401,7 @@
                  console.log(`Workspaceing progress for user '${username}' and topic_id '${topicId}'`);
 
                  try {
-                     const response = await fetch(`http://127.0.0.1:5000/progress/${username}/${topicId}`); // Corrected IP address if needed
+                     const response = await fetch(`http://127.0.0.1:5000/progress/${username}/${topicId}`);
                      if (response.status === 404) {
                          console.log(`No existing progress found for ${username} / ${topicId} (404).`);
                          return;
@@ -457,8 +453,6 @@
                      console.warn("Cannot save progress: Username, topicId, or current time is missing.");
                      return;
                  }
-
-                 // console.log(`Saving progress for user '${username}', topic_id '${topicId}': ${currentTime}s`);
 
                   const saveUrl = `http://127.0.0.1:5000/progress/save/${username}/${topicId}`;
                   const progressData = { currentTime: currentTime };
@@ -667,7 +661,7 @@
                  }
              }
 
-             // --- Function to Render the Course Index from Video Data Array (Track/Module Layout) ---
+             // --- Function to Render the Course Index from Video Data Array (Header + Grid Layout) ---
              function renderCourseIndex(videosData) {
                   const courseIndexContentDiv = document.getElementById('courseIndexContent');
                   if (!courseIndexContentDiv) return;
@@ -693,14 +687,14 @@
                        'Statistics': { title: '📊 Statistics Fundamentals', description: 'Learn the basics of statistical analysis.'},
                        'Excel': { title: '📈 Excel for Data Analysis', description: 'Master Excel for data manipulation and analysis.'},
                        'SQL': { title: '🗄️ SQL for Analytics', description: 'Query and manage data using SQL.'},
-                       'data-analyst': { title: '🟦 Data Analyst Track', description: 'Comprehensive path for aspiring data analysts. Includes Statistics, Excel, and SQL basics.'}, // Added description
+                       'data-analyst': { title: '🟦 Data Analyst Track', description: 'Comprehensive path for aspiring data analysts. Includes Statistics, Excel, and SQL basics.'},
                        'business-analyst': { title: '🟨 Business Analyst Track', description: 'Build on fundamentals with business concepts and tools.'},
                        'data-scientist': { title: '🟥 Data Scientist Track', description: 'Dive into advanced statistics, machine learning, and algorithms.'},
                        'big-data': { title: '🟩 Big Data & Cloud Tools', description: 'Explore technologies for large-scale data.'},
                        'Uncategorized': { title: '❓ Uncategorized Videos', description: 'Videos not assigned to a specific module.'}
                    };
 
-                 const moduleKeys = Object.keys(modules).sort();
+                 const moduleKeys = Object.keys(modules).sort(); // Sort module keys alphabetically
 
                  if (moduleKeys.length === 0) {
                       showMessage(courseIndexContentDiv, 'No course modules defined in data. Videos might be missing module names.', 'secondary');
@@ -712,36 +706,43 @@
                      const moduleVideos = modules[moduleKey];
                      moduleVideos.sort((a, b) => a.videoTitle.localeCompare(b.videoTitle)); // Sort videos alphabetically within module
 
+                     // Create a section for each module
                      const moduleSection = document.createElement('section');
-                     moduleSection.classList.add('track-card'); // Use 'track-card' class for the main module/track card
+                     moduleSection.classList.add('module-section'); // Class for the module container
 
                      const displayInfo = moduleDisplayInfo[moduleKey] || { title: `📚 ${moduleKey}`, description: 'Videos in this module.' };
 
+                     // Add the module heading
+                     const moduleHeading = document.createElement('h2');
+                     moduleHeading.classList.add('module-heading'); // Class for the module heading
+                     moduleHeading.textContent = displayInfo.title;
+                     moduleSection.appendChild(moduleHeading);
 
-                     moduleSection.innerHTML = `
-                         <h2>${displayInfo.title}</h2>
-                         <p class="track-description">${displayInfo.description}</p>
-                         <div class="topic-grid">
-                             </div>
-                     `;
+                      // Add the module description (optional, based on screenshot)
+                      // const moduleDescription = document.createElement('p');
+                      // moduleDescription.classList.add('module-description');
+                      // moduleDescription.textContent = displayInfo.description;
+                      // moduleSection.appendChild(moduleDescription);
 
-                     const topicGrid = moduleSection.querySelector('.topic-grid'); // Corrected selector
+
+                     // Create the grid container for topics
+                     const topicCardsGrid = document.createElement('div');
+                     topicCardsGrid.classList.add('topic-cards-grid'); // Class for the grid
 
                      moduleVideos.forEach(video => {
                          const topicCardLink = document.createElement('a');
-                         topicCardLink.href = `courses.html?video=${video.topicId}`; // Link to the video player view
-                         topicCardLink.classList.add('video-topic-card'); // Use 'video-topic-card' for nested video cards
+                         topicCardLink.href = `courses.html?video=${video.topicId}`;
+                         topicCardLink.classList.add('topic-card'); // Class for individual topic cards
 
+                          // Simplified card content based on screenshot (Title and minimal details)
                          topicCardLink.innerHTML = `
                              <h4>${video.videoTitle}</h4>
-                             <p>${video.videoDescription || 'No description available.'}</p>
-                             <span class="watch-link"><i class="fas fa-video"></i> Watch ${video.videoUrl && video.videoUrl.includes('list=') ? 'Playlist' : 'Video'}</span>
-                             ${video.totalDuration ? `<span class="video-duration"><i class="far fa-clock"></i> ${formatTimeToHHMMSS(video.totalDuration)}</span>` : ''}
-                         `;
-                         topicGrid.appendChild(topicCardLink); // Append to topicGrid
+                              <p class="topic-card-details">Some details</p> `;
+                         topicCardsGrid.appendChild(topicCardLink); // Append to the grid
                      });
 
-                     courseIndexContentDiv.appendChild(moduleSection);
+                     moduleSection.appendChild(topicCardsGrid); // Append the grid to the module section
+                     courseIndexContentDiv.appendChild(moduleSection); // Append the module section to the main content div
                  });
 
                  const comingSoonMessage = document.createElement('p');
